--- a/style.css
+++ b/style.css
@@ -51,3 +51,15 @@ main {
     padding: 20px 0;
     color: lightgrey;
 }
+.mainview.container div {
+    text-align: center;
+    padding: 20px 0;
+    color: lightgrey;
+}
+.mainview.container div>h2 {
+    font-size: 55px;
+}
+.mainview.container div p {
+    font-size: 25px;
+    padding: 20px 0;
+}
