--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ main {
 }
 .mainview.container ul {
     list-style: none;
-    padding: 40px 10px 10px 10px;
+    padding: 5px 10px 0 10px;
     color: lightgrey;
     position: absolute;
     top: 0;
