--- a/style.css
+++ b/style.css
@@ -25,7 +25,10 @@ main {
     width: 80%;
     margin: 0 auto;
 }
-
+.logo a {
+    text-decoration: none;
+    color: #E50914;
+}
 .logo {
     line-height: 80px;
     height: 80px;
@@ -128,6 +131,10 @@ img.flag {
 #movie, #tv {
     display: none;
 }
-#movie.visible, #tv.visible {
+#movie.visible, #tv.visible, #trending.visible {
     display: block;
+}
+#trending {
+    display: flex;
+    flex-direction: column;
 }
